# Hermes

./: README.md
backend/: .gitignore  Makefile  pyproject.toml
backend/app/: main.py  models.py  routes.py  schemas.py
backend/app/news_scrapper/: items.py  pipelines.py
backend/app/news_scrapper/spiders/: g1.py  lemonde.py  uol.py
backend/app/services/: db.py  settings.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
