[tool.poetry]
name = "hermes-backend"
version = "0.1.0"
description = ""
authors = ["ThiagoORuby <trs@ic.ufal.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
fastapi = "^0.111.0"
arq = "^0.26.0"
python-dateutil = "^2.9.0.post0"
pydantic-settings = "^2.3.3"
python-dotenv = "^1.0.1"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "poetry"

[tool.black]
line-length = 79
skip-string-normalization = true
